update mongo-api (#9)
* update mongo-api

* update swagger doc
