# api/mongo-api/swagger/docs/swagger.json
@@ -75,7 +75,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.MongoGetBodyTop"
+                            "$ref": "#/definitions/api.MongoAPIGetBodyTop"
                         }
                     }
                 ],
@@ -109,7 +109,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.MongoGetBodyTop"
+                            "$ref": "#/definitions/api.MongoAPIGetRegexBodyTop"
                         }
                     }
                 ],
@@ -123,7 +123,7 @@
                 }
             }
         },
-        "/api/v1/insertManyDocument/{collection}": {
+        "/api/v1/insertManyDocument": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -150,7 +150,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.MongoInsertManyDocumentBodyTop"
+                            "$ref": "#/definitions/api.MongoAPIInsertManyDocumentBodyTop"
                         }
                     }
                 ],
@@ -164,7 +164,7 @@
                 }
             }
         },
-        "/api/v1/insertSingleDocument/{collection}": {
+        "/api/v1/insertSingleDocument": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -191,7 +191,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.MongoInsertSingleDocumentBodyTop"
+                            "$ref": "#/definitions/api.MongoAPIInsertSingleDocumentBodyTop"
                         }
                     }
                 ],
@@ -248,6 +248,74 @@
         }
     },
     "definitions": {
+        "api.MongoAPIGetBodyTop": {
+            "type": "object",
+            "required": [
+                "body",
+                "collection"
+            ],
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "collection": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.MongoAPIGetRegexBodyTop": {
+            "type": "object",
+            "required": [
+                "collection",
+                "data",
+                "field"
+            ],
+            "properties": {
+                "collection": {
+                    "type": "string"
+                },
+                "data": {
+                    "type": "string"
+                },
+                "field": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.MongoAPIInsertManyDocumentBodyTop": {
+            "type": "object",
+            "required": [
+                "collection"
+            ],
+            "properties": {
+                "body": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "additionalProperties": true
+                    }
+                },
+                "collection": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.MongoAPIInsertSingleDocumentBodyTop": {
+            "type": "object",
+            "required": [
+                "body",
+                "collection"
+            ],
+            "properties": {
+                "body": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "collection": {
+                    "type": "string"
+                }
+            }
+        },
         "api.MongoDeleteSingleDocumentBodyTop": {
             "type": "object",
             "properties": {
@@ -255,29 +323,6 @@
                     "type": "string"
                 }
             }
-        },
-        "api.MongoGetBodyTop": {
-            "type": "object",
-            "properties": {
-                "collection": {
-                    "type": "string"
-                },
-                "findData": {
-                    "type": "string"
-                },
-                "findField": {
-                    "type": "string"
-                }
-            }
-        },
-        "api.MongoInsertManyDocumentBodyTop": {
-            "type": "array",
-            "items": {
-                "$ref": "#/definitions/api.MongoInsertSingleDocumentBodyTop"
-            }
-        },
-        "api.MongoInsertSingleDocumentBodyTop": {
-            "type": "object"
         },
         "api.MongoUpdateSingleDocumentBodyTop": {
             "type": "object",
